--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -2,5 +2,8 @@ disabled_rules: # rule identifiers turned on by default to exclude from running
   - vertical_whitespace
   - trailing_whitespace
 
+identifier_name:
+  allowed_symbols: "_"
+
 excluded: # paths to ignore during linting. Takes precedence over `included`.
   - Pods
