--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -7,3 +7,10 @@ identifier_name:
 
 excluded: # paths to ignore during linting. Takes precedence over `included`.
   - Pods
+
+line_length:
+  warning: 120
+  ignores_function_declarations: true
+  ignores_comments: true
+  ignores_interpolated_strings: true
+  ignores_urls: true
